[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openrbt"
version = "0.1.0"
description = "A simple, beginner-friendly robotics communication library"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []

[project.scripts]
openrbt = "openrbt.cli:main"
